# mirage

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/order_system/: docker-compose.yml  mirage.yaml
examples/order_system/services/common/: tracing.py
examples/order_system/services/inventory_service/: main.py  quirks.py
examples/order_system/services/order_service/: main.py
examples/order_system/services/payment_service/: main.py
examples/order_system/services/shipping_service/: main.py
examples/order_system/trace-data/: inventory-service.jsonl  order-service.jsonl  payment-service.jsonl  shipping-service.jsonl
mirage/: __init__.py  cli.py  config.py  discover.py  llm.py  proxy.py
mirage/analyzer/: sut_analyzer.py  trace_analyzer.py
mirage/mockgen/: llm_backend.py
mirage/testgen/: scenario_gen.py  test_runner.py
